# antilog

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md
antilog/: CMakeLists.txt  resources.qrc
antilog/src/: antilog.cpp  antilog.h  antilog.ui  antilogapi.cpp  antilogapi.h  dirsourcedialog.cpp  dirsourcedialog.h  dirsourcedialog.ui  extendedfilterdialog.cpp  extendedfilterdialog.h  extendedfilterdialog.ui  extendedfilteritem.cpp  extendedfilteritem.h  extendedfiltermodel.cpp  extendedfiltermodel.h  extendedwidget.cpp  extendedwidget.h  filereader.cpp  filereader.h  filesourcedialog.cpp  filesourcedialog.h  filesourcedialog.ui  formatdialog.cpp  formatdialog.h  formatdialog.ui  formatdialoglistwidget.cpp  formatrule.cpp  formatrule.h  formatscheme.cpp  formatscheme.h  formatschememodel.cpp  formatschememodel.h  formatwidget.cpp  formatwidget.h  formatwidget.ui  inputbases.cpp  inputbases.h  inputdialog.cpp  inputdialog.h  inputlist.cpp  (+43 more)
antilog/src/column/: columndefinitions.cpp  columndefinitions.h  columndialog.cpp  columndialog.h  columndialog.ui  columnwidget.cpp  columnwidget.h  columnwidget.ui  globalcolumn.cpp  globalcolumn.h  globalcolumnconfig.cpp  globalcolumnconfig.h  rowheightdelegate.cpp  rowheightdelegate.h  schemecolumn.cpp  schemecolumn.h  schemecolumnmodel.cpp  schemecolumnmodel.h
antilog/src/extendedfilter/: extendedfilterdialog.cpp  extendedfilterdialog.h  extendedfilterdialog.ui  extendedfilteritem.cpp  extendedfilteritem.h  extendedfiltermodel.cpp  extendedfiltermodel.h  extendedwidget.cpp  extendedwidget.h  extendedwidget.ui
antilog/src/format/: formatdialog.cpp  formatdialog.h  formatdialog.ui  formatdialoglistwidget.h  formatrule.cpp  formatrule.h  formatscheme.cpp  formatscheme.h  formatschememodel.cpp  formatschememodel.h  formatwidget.cpp  formatwidget.h  formatwidget.ui  tablecellformat.cpp  tablecellformat.h  tableformat.cpp  tableformat.h
antilog/src/inputs/: dirsourcedialog.cpp  dirsourcedialog.h  dirsourcedialog.ui  filereader.cpp  filereader.h  filesourcedialog.cpp  filesourcedialog.h  input.cpp  input.h  inputbases.cpp  inputbases.h  inputdialog.cpp  inputdialog.h  inputdialog.ui  inputlist.cpp  inputlist.h  inputprocessors.cpp  inputprocessors.h  inputsources.cpp  inputsources.h  inputsourcesudp.cpp  inputsourcesudp.h  inputtableviewmodel.cpp  inputtableviewmodel.h  inputvisitorbase.h  inputwidget.ui  newinputdialog.cpp  newinputdialog.h  passprocessordialog.cpp  passprocessordialog.h  regexprocessordialog.cpp  regexprocessordialog.h  regexprocessordialog.ui  sourceandprocessor.cpp  sourceandprocessor.h  sourcevisitors.cpp  sourcevisitors.h  udpmulticastsourcedialog.cpp  udpmulticastsourcedialog.h  udpmulticastsourcedialog.ui  (+3 more)
antilog/src/logentry/: logcellformatter.h  logentry.cpp  logentry.h  logentryformatter.cpp  logentryformatter.h  logseverities.cpp  logseverities.h  logviewtablemodel.cpp  logviewtablemodel.h
antitestgui/: CMakeLists.txt
antitestgui/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui
antiudp/: CMakeLists.txt
antiudp/src/: main.cpp
misc/: spdlog.txt  spdlog_modified.txt
